[package]
name = "sigar-sys"
version = "1.0.0"
authors = ["dtynn <dtynn@163.com>"]
build = "build.rs"

description = "Low level bindings to sigar."
documentation = "https://docs.rs/sigar-sys"
homepage = "https://github.com/dtynn/sigar-rs/tree/master/sigar-sys"
repository = "https://github.com/dtynn/sigar-rs"
readme = "README.md"
keywords = ["sigar", "sys", "ffi", "binding"]
license = "MIT"
categories = ["external-ffi-bindings"]

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"

